# ai-quality-gate

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
tests/: test_evals.py
