[project]
name = "ai-quality-gate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "deepeval>=3.7.6",
    "openai>=2.14.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
]





