[project]
name = "ai-quality-gate"
version = "0.1.0"
description = "Production-grade AI evaluation framework using DeepEval and Pytest for model-graded risk assessment and compliance monitoring."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=2.14.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "deepeval>=3.7.6",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.10",
]





